# lolzteam-api-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
codegen/src/: main.rs
docs/: DOCS_EN.md  DOCS_RU.md  README_EN.md
examples/: README.md  basic.rs  forum_users.rs  market_categories.rs
examples/forum/: activity.rs  chatbox.rs  conversations.rs  forum_categories.rs  forum_misc.rs  forum_search.rs  forum_threads.rs  forum_users.rs  notifications.rs  posts.rs  profile_posts.rs
examples/general/: basic.rs  error_handling.rs  live_full_test.rs  separate_proxies.rs
examples/market/: arbitrage.rs  batch_operations.rs  managing.rs  market_categories.rs  market_item.rs  market_profile.rs  market_search.rs  monitor.rs  orders.rs  payments.rs  purchasing.rs
schemas/: forum.json
src/: client.rs  error.rs  lib.rs  models.rs
src/forum/: methods.rs  types.rs
src/market/: methods.rs  types.rs
tests/: client_tests.rs  integration_test.rs  live_api_tests.rs  mock_server_tests.rs  rate_limiter_tests.rs  retry_multipart_regression.rs
